// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@wdio/sync should transform browser commands 1`] = `
"\\"use strict\\";

describe('webdriver.io page', () => {
  it('should have the right title', async () => {
    await browser.url('https://webdriver.io');
    const title = await browser.getTitle();
  });
});

"
`;

exports[`@wdio/sync should transform element commands 1`] = `
"\\"use strict\\";

describe('webdriver.io page', () => {
  it('should have the right title', async () => {
    await (await $('foobar')).click();
    await (await (await (await $('foobar')).$('foobar')).$$('foobar'))[123].click();
    const elem = await $('foobar');
    await elem.dragAndDrop(await $('barfoo'));
  });
});

"
`;
